--- a/components/Rating/Rating.module.css
+++ b/components/Rating/Rating.module.css
@@ -9,3 +9,19 @@
 .editable {
     cursor: pointer;
 }
+
+.ratingWrapper {
+    position: relative;
+}
+
+.errorMessage {
+    width: max-content;
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    color: var(--red);
+}
+
+.error {
+    stroke: var(--red);
+}
