--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,7 @@ a {
 	--primary: #7653FC;
 	--primary-hover: #6344df;
 	--red: #FC836D;
+	--red-light: #e48b7b;
 	--green: #1DC37E;
 	--green-light: #C8F8E4;
 	--font-family: "Open Sans", sans-serif;
